--- a/setup.Rmd
+++ b/setup.Rmd
@@ -85,7 +85,7 @@ respdat=respdat[respdat$Year<=max(seio_covariates_mon$Year),]
     "SST.11","SST.12","SST.13",
     "SST.11","SST.12","SST.13",
    "precip.gpcp.kerala", "precip.gpcp.kerala",
-   "ONI")
+   "ONI","DMI","Bakun.UPW")
   covmon=list(
      7:9,7:9,7:9,7:9,
      1:3,1:3,1:3,1:3,
@@ -125,7 +125,7 @@ respdat=respdat[respdat$Year<=max(seio_covariates_mon$Year),]
      6:9,6:9,6:9,
      10:12,10:12,10:12,
      4:5,6:7,
-     1:12)
+     1:12, 9:11, 6:9)
 
 #fix problem in seio_covariates_mon with SST in 1994.
   #replace with 5 year mean for that month
@@ -204,11 +204,14 @@ fullrespdat = respdat
 ```{r message=FALSE,warning=FALSE, echo=FALSE}
 covnames = c("precip.gpcp.kerala.mon6to7.", "precip.gpcp.kerala.mon4to5.", 
              "SST.4.mon1to12.", "SST.4.mon6to9.", 
-             "SST.UPW.4.mon1to3.", "SST.UPW.4.mon6to9.", "SST.UPW.4.mon10to12.", "SST.UPW.4.mon4to6.",
-             "max.SST.UPW.4.mon6to9.",
+             "SST.UPW.4.mon6to9.", "Bakun.UPW.mon6to9.",
              "SST.2.10.mon6to9.", "SST.2.10.mon9to10.", "SST.2.10.mon1to12.",
              "SST.2.10.mon3to5.", "SST.2.10.mon10to12.",
-             "SST.2.10.3.yr.runsum.", "ONI.mon1to12.")
+             "SST.2.10.3.yr.runsum.", "ONI.mon1to12.",
+             "DMI.mon9to11.")
+```
+
+```{r message=FALSE,warning=FALSE, echo=FALSE}
 #set up to use consistent data
 dat=fullrespdat[,c("Year","spawners0", "nspawners1", "nspawners2", "spawners0", "spawners1", "spawners2", paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
 dat=na.omit(dat)
@@ -217,13 +220,6 @@ if(any(diff(dat.spawners$Year)!=1)) stop("Problem in setup.Rmd.  The covariate d
 ```
 
 ```{r message=FALSE,warning=FALSE, echo=FALSE}
-covnames = c("precip.gpcp.kerala.mon6to7.", "precip.gpcp.kerala.mon4to5.", 
-             "SST.4.mon1to12.", "SST.4.mon6to9.", 
-             "SST.UPW.4.mon1to3.", "SST.UPW.4.mon6to9.", "SST.UPW.4.mon10to12.", "SST.UPW.4.mon4to6.",
-             "max.SST.UPW.4.mon6to9.",
-             "SST.2.10.mon6to9.", "SST.2.10.mon9to10.", "SST.2.10.mon1to12.", 
-             "SST.2.10.mon3to5.", "SST.2.10.mon10to12.",
-             "SST.2.10.3.yr.runsum.", "ONI.mon1to12.")
 #set up to use consistent data
 dat=fullrespdat[,c("Year","nspawners0", "nspawners1", "nspawners2", 
                    "spawners0", "spawners1", "spawners2", 
