--- a/Table_Hypotheses.tex
+++ b/Table_Hypotheses.tex
@@ -1,7 +1,4 @@
 
-\renewcommand{\arraystretch}{1.2}
-
-
 \begin{table}
 
 \caption{\label{tab:print-table-hyp}Table 1. Hypotheses for covariates affecting landings.  $S_t$ is quarter 3 (July-September) catch in the current season, $S_{t-1}$ is quarter 3 catch in the previous season. $N_t$ is the post-monsoon October-March catch in the current season and $N_{t-1}$ is the October-March catch in the prior season. Because the fishing season is July-June, $N_t$ spans two calendar years. DD = hypotheses related to effects of past abundance (landings) on current abundance. S = hypotheses related to catch during the spawning months. L = hypotheses related to larval and juvenile growth and survival. A = hypotheses affecting all ages. See the introduction for discussion of the literature on the effects of environmental covariates on sardine landings.}
@@ -44,9 +41,11 @@ L2 \newline $S_t \sim$ Jun-Sep UPW in $t-1$ \& $t$ \newline $N_t \sim$ Jun-Sep U
 \hline
 L3 \newline $S_t\sim$ CHL in $t-1$ \& $t$ \newline $N_t \sim$ CHL in $t-1$ \& $t$ & Surface Chl-a is a proxy for phytoplankton abundance and thus food availability, so higher bloom intensities may support greater fish abundance in the current and future years.\\
 \hline
-A1 \newline $S_t \sim$ 2.5-year ave. nearshore SST \newline $N_t \sim$ 2.5-year ave. nearshore SST & Spawning, early survival, and recruitment of sardines depends on a multitude of cascading factors summarized by the multi-year average  nearshore SST. The multi-year average SST has been correlated with recruitment and abundance in other sardines (Checkley et al. 2017) and is related to the optimal temperature windows for sardines (Takasuka et al. 2007).\\
+A1 \newline $S_t \sim$ 2.5-yr ave. nearshore SST \newline $N_t \sim$ 2.5-yr ave. nearshore SST & Spawning, early survival, and recruitment of sardines depends on a multitude of cascading factors summarized by the multi-year average  nearshore SST. The multi-year average SST has been correlated with recruitment and abundance in other sardines (Checkley et al. 2017) and is related to the optimal temperature windows for sardines (Takasuka et al. 2007).\\
 \hline
 A2 \newline $S_t \sim$ ONI in $t-1$ \newline $N_t \sim$ ONI in $t-1$ & The El Nino/Southern Oscillation (ENSO) impacts a range of environmental parameters (e.g., precipitation, SST, frontal zones, winds, etc.) that may impact spawning and early survival of sardines (Supraba et al. 2016, Rohit et al. 2018).\\
+\hline
+A3 \newline $S_t \sim$ DMI in $t-1$ \newline $N_t \sim$ DMI in $t-1$ \& $t$ & Negative Dipole Mode Index (DMI) values in Sep-Nov are associated with anoxic events on the Kerala coast while positive values are associated with a absence of such events (Vallivattathillam et al. 2017).\\
 \hline
 \end{tabular}
 \end{table}
